--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -243,6 +243,43 @@
  aegyptian_culture.1.d: "Form Aegyptian Culture"
  aegyptian_culture.1.a: "Form Aegyptian Culture"
  aegyptian_culture.1.f: "Form Aegyptian Culture"
+
+
+ veiled_exarchate.1.t: "The Exarchate of Aegypt"
+ veiled_exarchate.1.d: "[ROOT.GetCountry.GetName] has resecured dominion over [SCOPE.sCountry('aegypt_country').GetName]. The previous state of affairs known as the Veiled Exarchate, for by a technicality Aegypt remained legally subject to the [SCOPE.sCountry('byzantine_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('byzantine_ruler').GetPrimaryRoleTitle], it was little more than lip service."
+ veiled_exarchate.1.f: "Today the Nile was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('egypt_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, under the shadow of the pyramids, how they will return civilization to the lands of Aegypt."
+ veiled_exarchate.1.a: "Lenient settlement with the Komnenoi [SCOPE.sCharacter('aegypt_ruler').GetPrimaryRoleTitle]."
+ veiled_exarchate.1.b: "Enforce our will on [SCOPE.sCountry('aegypt_country').GetName]."
+
+ veiled_exarchate.2.t: "The Exarchate of Afrika"
+ veiled_exarchate.2.d: "[ROOT.GetCountry.GetName] has resecured dominion over [SCOPE.sCountry('africa_country').GetName]. The previous state of affairs known as the Veiled Exarchate, for by a technicality Afrika remained legally subject to the [SCOPE.sCountry('romaioi_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle], it was little more than lip service."
+ veiled_exarchate.2.f: "Today the Mediterranean was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('africa_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, how they will return civilization to the lands of Africa."
+ veiled_exarchate.2.a: "Allow [SCOPE.sCountry('africa_country').GetName] to continue as they were under [ROOT.GetCountry.GetName] guidence."
+ veiled_exarchate.2.b: "Enforce our will on [SCOPE.sCountry('africa_country').GetName]."
+
+ veiled_exarchate.3.t: "The Katepaníkion of Italia"
+ veiled_exarchate.3.d: "[ROOT.GetCountry.GetName] has resecured dominion over [SCOPE.sCountry('italy_country').GetName]. The previous state of affairs known as the Veiled Exarchate, for by a technicality Italia remained legally subject to the [SCOPE.sCountry('romaioi_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle], it was little more than lip service."
+ veiled_exarchate.3.f: "Today the Mediterranean was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('italy_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, how they will return civilization to the Katepaníkion of Italia."
+ veiled_exarchate.3.a: "Allow [SCOPE.sCountry('italy_country').GetName] to continue as they were under [ROOT.GetCountry.GetName] guidence."
+ veiled_exarchate.3.b: "Enforce our will on [SCOPE.sCountry('italy_country').GetName]."
+
+ veiled_exarchate.4.t: "The Exarchate of Syria"
+ veiled_exarchate.4.d: "[ROOT.GetCountry.GetName] has resecured dominion over [SCOPE.sCountry('syria_country').GetName]. The previous state of affairs known as the Veiled Exarchate, for by a technicality Syria remained legally subject to the [SCOPE.sCountry('romaioi_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle], it was little more than lip service."
+ veiled_exarchate.4.f: "Today the Mediterranean was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('syria_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, under the shadow of the Antioch, how they will return civilization to the lands of Syria."
+ veiled_exarchate.4.a: "Allow [SCOPE.sCountry('syria_country').GetName] to continue as they were under [ROOT.GetCountry.GetName] guidence."
+ veiled_exarchate.4.b: "Enforce our will on [SCOPE.sCountry('syria_country').GetName]."
+
+ veiled_exarchate.5.t: "Welcome home Elysium"
+ veiled_exarchate.5.d: "[ROOT.GetCountry.GetName] has resecured dominion over [SCOPE.sCountry('elysium_country').GetName]."
+ veiled_exarchate.5.f: "Those who opposed the [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle] were quickly put down. [SCOPE.sCountry('elysium_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, how they will return civilization to the lands of Elysium."
+ veiled_exarchate.5.a: "Allow [SCOPE.sCountry('elysium_country').GetName] to continue as they were under [ROOT.GetCountry.GetName] guidence."
+ veiled_exarchate.5.b: "Enforce our will on [SCOPE.sCountry('elysium_country').GetName]."
+
+ veiled_exarchate.6.t: "Welcome home Australis"
+ veiled_exarchate.6.d: "[ROOT.GetCountry.GetName] has resecured dominion over [SCOPE.sCountry('australis_country').GetName]."
+ veiled_exarchate.6.f: "Those who opposed the [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle] were quickly put down. [SCOPE.sCountry('elysium_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, how they will return civilization to the lands of Australis."
+ veiled_exarchate.6.a: "Allow [SCOPE.sCountry('australis_country').GetName] to continue as they were under [ROOT.GetCountry.GetName] guidence."
+ veiled_exarchate.6.b: "Enforce our will on [SCOPE.sCountry('australis_country').GetName]."
  
 
 
