--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -2,44 +2,37 @@
 
  #journal entries
 
- je_veiled_exarchate: "The Exarchate of Aegypt"
- je_veiled_exarchate_reason: "Our influence in Aegypt has grown considerably, yet our power in the region is dependent on our relations with the breakaway state. By establishing a Exarchate over the country, our domination would be assured."
- veiled_exarchate.1.t: "The Exarchate of Aegypt"
- veiled_exarchate.1.d: "[ROOT.GetCountry.GetName] has secured dominion over [SCOPE.sCountry('aegypt_country').GetName]. This state of affairs is quickly becoming known as the Veiled Exarchate, for by a technicality Aegypt remains legally subject to the [SCOPE.sCountry('byzantine_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('byzantine_ruler').GetPrimaryRoleTitle], who helplessly observes the situation."
- veiled_exarchate.1.f: "Today the Nile was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('egypt_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, under the shadow of the pyramids, how they will return civilization to the lands of Aegypt."
- veiled_exarchate.1.a: "Lenient settlement with the Komnenoi [ROOT.GetCountry.GetAdjectiveNoFormatting]."
- veiled_exarchate.1.b: "Assure [SCOPE.sCountry('aegypt_country').GetAdjectiveNoFormatting] has a more loyal [SCOPE.sCharacter('aegypt_ruler').GetPrimaryRoleTitle] and enforce our will on the region."
-
  veiled_exarchate_aegypt: "The Exarchate Aegypt"
  veiled_exarchate_africa: "The Exarchate Africa"
  veiled_exarchate_italy: "The Katepaníkion Italia"
 
+ je_veiled_exarchate: "The Exarchate of Aegypt"
+ je_veiled_exarchate_reason: "Our influence in Aegypt has grown considerably, yet our power in the region is dependent on our relations with the breakaway Exarchate. By reestablishing formal dominion over the country, our domination would be assured."
+
  je_veiled_exarchate2: "The Exarchate of Africa"
- je_veiled_exarchate2_reason: "Our influence in Africa has grown considerably, yet our power in the region is dependent on our relations with the breakaway state. By establishing a Exarchate over the country, our domination would be assured."
- veiled_exarchate.2.t: "The Exarchate of Africa"
- veiled_exarchate.2.d: "[ROOT.GetCountry.GetName] has secured dominion over [SCOPE.sCountry('africa_country').GetName]. This state of affairs is quickly becoming known as the Veiled Exarchate, for by a technicality Africa remains legally subject to the [SCOPE.sCountry('romaioi_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle], who helplessly observes the situation."
- veiled_exarchate.2.f: "Today the Mediterranean was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('africa_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, under the shadow of the Carthago, how they will return civilization to the lands of Africa."
- veiled_exarchate.2.a: "None can deny the power of the [ROOT.GetCountry.GetAdjectiveNoFormatting]."
- veiled_exarchate.2.b: "Assure [SCOPE.sCountry('africa_country').GetAdjectiveNoFormatting] has a more loyal [SCOPE.sCharacter('africa_ruler').GetPrimaryRoleTitle] and enforce our will on the region."
+ je_veiled_exarchate2_reason: "Our influence in Africa has grown considerably, yet our power in the region is dependent on our relations with the breakaway Exarchate. By reestablishing formal dominion over the country, our domination would be assured."
 
  je_veiled_exarchate3: "The Katepaníkion of Italia"
- je_veiled_exarchate3_reason: "Our influence in Italia has grown considerably, yet our power in the region is dependent on our relations with the breakaway state. By establishing a Exarchate over the country, our domination would be assured."
- veiled_exarchate.3.t: "The Katepaníkion of Italia"
- veiled_exarchate.3.d: "[ROOT.GetCountry.GetName] has secured dominion over [SCOPE.sCountry('italy_country').GetName]. This state of affairs is quickly becoming known as the Veiled Katepaníkion, for by a technicality Italia remains legally subject to the [SCOPE.sCountry('romaioi_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle], who helplessly observes the situation."
- veiled_exarchate.3.f: "Today the Mediterranean was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('italy_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, under the shadow of the Naples, how they will return civilization to the lands of Italia."
- veiled_exarchate.3.a: "None can deny the power of the [ROOT.GetCountry.GetAdjectiveNoFormatting]."
- veiled_exarchate.3.b: "Assure [SCOPE.sCountry('italy_country').GetAdjectiveNoFormatting] has a more loyal [SCOPE.sCharacter('italy_ruler').GetPrimaryRoleTitle] and enforce our will on the region."
+ je_veiled_exarchate3_reason: "Our influence in Italia has grown considerably, yet our power in the region is dependent on our relations with the breakaway Katepaníkion. By reestablishing formal dominion over the country, our domination would be assured."
 
- veiled_exarchate.4.t: "The Exarchate of Syria"
- veiled_exarchate.4.d: "[ROOT.GetCountry.GetName] has secured dominion over [SCOPE.sCountry('syria_country').GetName]. This state of affairs is quickly becoming known as the Veiled Exarchate, for by a technicality Syria remains legally subject to the [SCOPE.sCountry('romaioi_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle], who helplessly observes the situation."
- veiled_exarchate.4.f: "Today the Mediterranean was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('syria_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, under the shadow of the Antioch, how they will return civilization to the lands of Syria."
- veiled_exarchate.4.a: "None can deny the power of the [ROOT.GetCountry.GetAdjectiveNoFormatting]."
- veiled_exarchate.4.b: "Assure [SCOPE.sCountry('syria_country').GetAdjectiveNoFormatting] has a more loyal [SCOPE.sCharacter('syria_ruler').GetPrimaryRoleTitle] and enforce our will on the region."
+ je_palaiologos_reforms_syria: "Palaiologos Reforms: Reclaim Syria"
+ je_palaiologos_reforms_syria_reason: "Syria has been lost to the tyrant of Aegypt, who stole his dominion from our rightful hands. We must reclaim it!"
+
+ je_palaiologos_reforms_egypt: "Palaiologos Reforms: Reclaim Aegypt"
+ je_palaiologos_reforms_egypt_reason: "With Syria recaptured, we should turn our attention to Aegypt. Rightfully an Basileía Romaíon possession, it has fallen into the hands of a usurper."
 
  je_palaiologos_reforms_africa: "Palaiologos Reforms: Reclaim Africa"
- je_palaiologos_reforms_africa_reason: "We should turn our attention to Africa. Rightfully a Romaíon possession, it has fallen into the hands of a usurper."
+ je_palaiologos_reforms_africa_reason: "We should turn our attention to Africa. Our influence in the region is dependent on our relations with the breakaway Exarchate. By reestablishing formal dominion over our rightful possesion, our domination would be assured."
+
  je_palaiologos_reforms_italy: "Palaiologos Reforms: Reclaim Italia"
- je_palaiologos_reforms_italy_reason: "We should turn our attention to It. Rightfully a Romaíon possession, it has fallen into the hands of a usurper."
+ je_palaiologos_reforms_italy_reason: "We should turn our attention to Italia. Our influence in the region is dependent on our relations with the breakaway Katepaníkion. By reestablishing formal dominion over our rightful possesion, our domination would be assured."
+
+ je_palaiologos_reforms_elysium: "Palaiologos Reforms: Bring Elysium Home"
+ je_palaiologos_reforms_elysium_reason: "We should turn our attention to the new world. Our wayward colony must be brought home."
+
+ je_palaiologos_reforms_australis: "Palaiologos Reforms: Australis Colony"
+ je_palaiologos_reforms_australis_reason: "Australis though never a formal colony has been settled from our citizens thoughout the Romaion Commonwealth."
+
  je_palaiologos_reforms_navy: "Palaiologos Reforms: Naval Reform"
  je_palaiologos_reforms_navy_reason: "The navy has been long-neglected and is a hotbed of disloyalty. During our early wars with our rebellious Exarchates our navy threatened to defect to the Aegyptians multiple times, and we are forced to rely on the support of Latin powers to defend our coasts and the straits. Renovating the navy by developing our officer corps, fielding new detachments and outfitting new, larger ships must be a priority."
  
@@ -49,11 +42,6 @@
  je_palaiologos_reforms_main: "Palaiologos Renaissance"
  je_palaiologos_reforms_main_reason: "We must modernize and restore the Basileía Romaíon to greatness!."
  je_palaiologos_reforms_main_goal: "Complete 10 'Palaiologos' [Concept('concept_journal_entry', '$concept_journal_entries$')]"
- je_palaiologos_reforms_syria: "Palaiologos Reforms: Reclaim Syria"
- je_palaiologos_reforms_syria_reason: "Syria has been lost to the tyrant of Aegypt, who stole his dominion from our rightful hands. We must reclaim it!"
- je_palaiologos_reforms_syria_status: "Starting a diplomatic play against Aegypt will give European [Concept('concept_great_power', '$concept_great_powers$')] an [concept_active_interest] in the region."
- je_palaiologos_reforms_egypt: "Palaiologos Reforms: Reclaim Aegypt"
- je_palaiologos_reforms_egypt_reason: "With Syria recaptured, we should turn our attention to Aegypt. Rightfully an Basileía Romaíon possession, it has fallen into the hands of a usurper."
  je_palaiologos_reforms_economy: "Palaiologos Reforms: Urbanization"
  je_palaiologos_reforms_economy_reason: "Our economy is underdeveloped and unurbanized. We must embark on the path of industrialization."
  je_palaiologos_reforms_education: "Palaiologos Reforms: Education Reform"
