--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -78,14 +78,14 @@
  br_modifier_mediterranean_merchant_republic: "Merchant Republic"
  br_modifier_silk_road: "Silk Road"
  br_modifier_sahara_trade: "Trans-Sahara Trade Route"
- br_modifier_defensive_bonus: "Defensive Militarized Society"
- br_modifier_aggressive_bonus: "Aggressive Militarized Society"
+ br_modifier_defensive_bonus: "Defensive Military"
+ br_modifier_aggressive_bonus: "Aggressive Military"
  br_modifier_elysium: "Elysium"
  br_modifier_new_world_colony: "New World Colony"
  br_modifier_african_colony: "African Colony"
  br_modifier_desert_culture: "Desert Culture"
- br_modifier_power_bloc_bonus: "Power Bloc Leader Bonus"
- br_modifier_iberian_resistance: "Iberian Resistance"
+ br_modifier_power_bloc_bonus: "Power Bloc Leader"
+ br_modifier_autonomous_march: "Autonomous March"
  br_modifier_exarchate: "Exarchate"
  romaioi_military_reorganization: "Military Reorganization"
 
