--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -254,19 +254,20 @@
  ere_ere_name_tt: "Name of our country will be changed to 'Eastern Roman Empire'"
 
  #Power Blocs
- Romaion_Bloc: "Romaion Koinopolitia"
+ Romaion_Bloc: "Koinopolitia" #Basileía Romaíon
  Imperial_HRE: "Universum Regnum"
  Venetia_Trade_League: "Lega Italica"
  #Genoa_Trade_League: "Genoan League"
- Amsterdam_Alliance: "Amsterdam Alliance"
- Alexandria_Accords: "Alexandria Accords"
+ Amsterdam_Alliance: "Handelsovereenkomst"
+ Alexandria_Accords: "Alexandria Symmachia"
  Andalusian_league: "Al-Andalus"
  Mughal_Hegemony: "Wilayat-i-Hindustan"
- Khanate: "Khanate"
- North_Sea_Empire: "North-Sea Empire"
+ Khanate: "Ulug Ulus" 
+ North_Sea_Empire: "Nordsøimperiet"
  Stockholm_Sphere: "Stormaktstiden"
- #Danube_Pact: "Danube Pact"
- Commonwealth: "Commonwealth"
+ Danube_Pact: "Duna paktum"
+ Commonwealth: "Wspólnota"
+ holy_league_br: "Sanctum foedus"
 
 
 # 
