--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -235,6 +235,13 @@
  setting_recognized_asians_game_rule_unrecognized: "Unrecognized Asian Nations"
  setting_recognized_asians_game_rule_unrecognized_desc: "All Asian Nations start off as unrecognized."
 
+ rule_caliphate_game_rule: "@br_icon! #gold Basileía Romaíon#!: Caliphate Game Rule"
+ setting_caliphate_game_rule_small: "Abbasid Caliphate Small"
+ setting_caliphate_game_rule_small_desc: "Abbasid Caliphate starts off pushed into the Arabian desert with only Mecca and a few small vassals/tributaries"
+ setting_caliphate_game_rule_large: "Abbasid Caliphate Large"
+ setting_caliphate_game_rule_large_desc: "Abbasid Caliphate is resurgent, having just recently restored control of Mesopotamia,Egypt & Syria."
+
+
  #Comabt units
 
  #combat_unit_type_themata_infantry: "Themata Infantry"
@@ -270,6 +277,7 @@
  holy_league_br: "Sanctum foedus"
  ethiopia_bloc: "ītiyop’iya"
  friendship_treaty_bloc: "amistad rimanakuy"
+ treaty_of_independent_colonies: "Treaty of independent Colonies"
 
 
 # 
