--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -88,6 +88,8 @@
  br_modifier_autonomous_march: "Autonomous March"
  br_modifier_exarchate: "Exarchate"
  romaioi_military_reorganization: "Military Reorganization"
+ br_modifier_independent_new_world_colony: "Independent Colony"
+ br_steppe_colonial_expansion: "Steppe Expansion"
 
 
  # Horde
