--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -44,26 +44,26 @@
  STATE_MAINE: "Hyperborea"
  STATE_NORTH_CAROLINA: "Olecalcaneum"
  STATE_TEXAS: "Pays de Martel"
- STATE_YUKON_TERRITORY: "Yukon Territory"
- STATE_NORTHWEST_TERRITORIES: "Northwest Territories"
+ STATE_YUKON_TERRITORY: "Hanmasuton u-ota"
+ STATE_NORTHWEST_TERRITORIES: "Soombak'è"
  STATE_NUNAVUT: "Helluland"
  STATE_BRITISH_COLUMBIA: "Sakurashima"
- STATE_ALBERTA: "Alberta"
+ STATE_ALBERTA: "Chipeu-ian Rando"
  STATE_SASKATCHEWAN: "Saskatchewan"
  STATE_MANITOBA: "Skogheimr"
  STATE_ONTARIO: "Vatnsland"
  STATE_QUEBEC: "Vinland"
  STATE_NEWFOUNDLAND: "Markland"
- STATE_GUATEMALA: "Guatemala"
- STATE_HONDURAS: "Honduras"
- STATE_NICARAGUA: "Nicaragua"
- STATE_COSTA_RICA: "Costa Rica"
- STATE_PANAMA: "Panama"
+ STATE_GUATEMALA: "Cuauhtemallan"
+ STATE_HONDURAS: "Miskitu"
+ STATE_NICARAGUA: "Nicatlnahuac"
+ STATE_COSTA_RICA: "Turiraba"
+ STATE_PANAMA: "Bannaba"
  STATE_CUBA: "Atlanteum"
  STATE_URUGUAY: "Eastrioe"
- STATE_ECUADOR: "Ecuador"
- STATE_SANTO_DOMINGO: "Santo Domingo"
- STATE_HAITI: "Haiti"
+ STATE_ECUADOR: "Wayakil"
+ STATE_SANTO_DOMINGO: "'Ard Alqidiysin"
+ STATE_HAITI: "Terra di Santi"
  STATE_GOTLAND: "Gotland"
  STATE_GOTALAND: "Götaland"
  STATE_SCANIA: "Scania"
@@ -86,32 +86,32 @@
  STATE_ARAGON: "Aragó"
  STATE_CATALONIA: "Catalunya"
  STATE_BALEARES: "Balears"
- STATE_NEW_SOUTH_WALES: "New South Wales"
- STATE_VICTORIA: "Victoria"
- STATE_TASMANIA: "Tasmania"
- STATE_QUEENSLAND: "Queensland"
- STATE_SOUTH_AUSTRALIA: "South Australia"
- STATE_WESTERN_AUSTRALIA: "Western Australia"
- STATE_NORTHERN_TERRITORY: "Northern Territory"
- STATE_NORTH_ISLAND: "North Island"
- STATE_SOUTH_ISLAND: "South Island"
+ STATE_NEW_SOUTH_WALES: "Néa Anatolía"
+ STATE_VICTORIA: "Nikaia"
+ STATE_TASMANIA: "Asphodelia"
+ STATE_QUEENSLAND: "Oranjeland"
+ STATE_SOUTH_AUSTRALIA: "Argolída"
+ STATE_WESTERN_AUSTRALIA: "Theodoria"
+ STATE_NORTHERN_TERRITORY: "Inheemsland"
+ STATE_NORTH_ISLAND: "Te Ika-a-Maui"
+ STATE_SOUTH_ISLAND: "Te Waipounamu"
  STATE_WEST_MICRONESIA: "Nansei-guntou"
  STATE_EAST_MICRONESIA: "Nantou-guntou"
  STATE_WEST_JAVA: "Jawa Kulon"
  STATE_EAST_JAVA: "Jawi Wétan"
  STATE_CENTRAL_JAVA: "Jawi Madya"
  STATE_CEYLON: "Ilankai"
- STATE_URGA: "Urga"
- STATE_ULIASTAI: "Uliastai"
+ STATE_URGA: "Kharkhorum"
+ STATE_ULIASTAI: "Zawhan"
  STATE_OMAN: "Uman"
  STATE_ABU_DHABI: "Al-Sahil al-Mutasalih"
  STATE_YEMEN: "Al-Yaman"
  STATE_HEDJAZ: "Al-hijaz"
  STATE_TUNISIA: "Carthago"
- STATE_GUINEA: "Guinea"
+ STATE_GUINEA: "Gine"
  STATE_GHANA: "Gaana"
  STATE_TOGO: "Togo"
- STATE_DAHOMEY: "Dahomey"
+ STATE_DAHOMEY: "Fon"
  STATE_DEIR_EZ_ZOR: "Dayru z-Zawr"
  STATE_GABON: "Ngabu"
  STATE_BOTSWANA: "Botswana"
@@ -124,40 +124,40 @@
  STATE_ROMAGNA: "Romagna"
  STATE_LAZIO: "Latium"
  STATE_NEVADA: "Da Pendi"
- STATE_ARIZONA: "Arizona"
- STATE_NEW_MEXICO: "New Mexico"
+ STATE_ARIZONA: "Ali Sonak"
+ STATE_NEW_MEXICO: "Aztlán"
  STATE_CALIFORNIA: "Jiazhou"
- STATE_BAJA_CALIFORNIA: "Xia Jiazhou"
- STATE_SONORA: "Sonora"
- STATE_CHIHUAHUA: "Chihuahua"
- STATE_RIO_GRANDE: "Río Grande"
- STATE_GUERRERO: "Guerrero"
- STATE_DURANGO: "Durango"
+ STATE_BAJA_CALIFORNIA: "Pericúes"
+ STATE_SONORA: "Hiak"
+ STATE_CHIHUAHUA: "Huejotitán"
+ STATE_RIO_GRANDE: "Tó Ba’áadi"
+ STATE_GUERRERO: "Tlacateccatl"
+ STATE_DURANGO: "Korian"
  STATE_YUCATAN: "Yucatán"
- STATE_MEXICO: "México"
- STATE_JALISCO: "Jalisco"
+ STATE_MEXICO: "Mexihco"
+ STATE_JALISCO: "Xalisco"
  STATE_ZACATECAS: "Zacatecas"
- STATE_GUAYANA: "Guayana"
- STATE_ZULIA: "Zulia"
- STATE_MIRANDA: "Miranda"
- STATE_BOLIVAR: "Bolívar"
- STATE_ANTIOQUIA: "Antioquía"
- STATE_GUAVIARE: "Guaviare"
- STATE_CUNDINAMARCA: "Cundinamarca"
- STATE_CAUCA: "Cauca"
- STATE_PASTAZA: "Pastaza"
- STATE_CAJAMARCA: "Cajamarca"
- STATE_LIMA: "Lima"
+ STATE_GUAYANA: "Klein-Venedig"
+ STATE_ZULIA: "Madinat"
+ STATE_MIRANDA: "Ar-Riyaḍ"
+ STATE_BOLIVAR: "Fatimah"
+ STATE_ANTIOQUIA: "'Ishq Abad"
+ STATE_GUAVIARE: "Nukak"
+ STATE_CUNDINAMARCA: " Kuntur Marqa"
+ STATE_CAUCA: "Inzá"
+ STATE_PASTAZA: "Arajuno"
+ STATE_CAJAMARCA: "Caxamarca"
+ STATE_LIMA: "Itchyma"
  STATE_ICA: "Ika"
- STATE_AREQUIPA: "Arequipa"
- STATE_AMAZONAS: "Amazonas"
- STATE_MATO_GROSSO: "Mato Grosso"
+ STATE_AREQUIPA: "Ari Qipa"
+ STATE_AMAZONAS: "Tupi–Guarani"
+ STATE_MATO_GROSSO: "Aimoré"
  STATE_RIO_GRANDE_DO_SUL: "Saxonford"
  STATE_PARANA: "Norðefes"
- STATE_SAO_PAULO: "São Paulo"
- STATE_MINAS_GERAIS: "Minas Gerais"
- STATE_RIO_DE_JANEIRO: "Rio de Janeiro"
- STATE_TAHITI: "Tahiti"
+ STATE_SAO_PAULO: "Saint Paul"
+ STATE_MINAS_GERAIS: "Xakriabá"
+ STATE_RIO_DE_JANEIRO: "Baie de Printemps"
+ STATE_TAHITI: "Otahiti"
  STATE_TONGA: "Tonga"
  STATE_BAHIA: "Bahia"
  STATE_RIO_GRANDE_DO_NORTE: "Rio Grande do Norte"
@@ -584,8 +584,8 @@
  STATE_SAXONY: "Meissen"
  STATE_HESSE: "Hesse"
  STATE_BRUNSWICK: "Brunswick"
- STATE_GREATER_POLAND: "Warszawa"
- STATE_LESSER_POLAND: "Lublin"
+ STATE_GREATER_POLAND: "Wielkopolska"
+ STATE_LESSER_POLAND: "Małopolska"
  STATE_PIEDMONT: "Piedmont"
  STATE_SARDINIA: "Sardinia"
  STATE_SAKHALIN: "Karafuto"
