--- a/localization/german/br_cultures_l_english.yml
+++ b/localization/german/br_cultures_l_english.yml
@@ -21,7 +21,7 @@
  elysian: "Elysian"
  vinlander: "Vinlander"
  apoikoi: "Apoikoi"
- colonial_german: "Colonial-French"
+ colonial_french: "Colonial-French"
  colonial_italian: "Colonial-Italian"
  colonial_german: "Colonial-German"
  colonial_dutch: "Colonial-Dutch"
