--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -269,7 +269,7 @@
  Alexandria_Accords: "Alexandria Symmachia"
  Andalusian_league: "Al-Andalus"
  Mughal_Hegemony: "Wilayat-i-Hindustan"
- Khanate: "Ulug Ulus" 
+ khanate_br_pb: "Ulug Ulus" 
  North_Sea_Empire: "Nordsøimperiet"
  Stockholm_Sphere: "Stormaktstiden"
  Danube_Pact: "Duna paktum"
@@ -278,6 +278,7 @@
  ethiopia_bloc: "ītiyop’iya"
  friendship_treaty_bloc: "amistad rimanakuy"
  treaty_of_independent_colonies: "Treaty of independent Colonies"
+ co_prosperity_sphere_br_pb: "Dai Tōa Kyōeiken"
 
 
 # 
