--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -25,12 +25,6 @@
  #serbia_rebellion.1.f: "Envoys from the Serbian Exarchate arrived in Konstantinople informing us of their declaration of independence."
  #serbia_rebellion.1.a: "Unacceptable, Dispatch the Tagmata to Belgrade at once!"
 
- bulgarian_revolt.1.t: "Balkan Dynatói Revolt"
- bulgarian_revolt.1.d: "Powerful Dynatói in the balkans have rallied behind the Doukas family in their demands for greater autonomy."
- bulgarian_revolt.1.f: "The Doukai from their power base in Serbia, have taken control of Northern Bulgaria and demand we recognize their illegal annexation."
- bulgarian_revolt.1.a: "Crush the traitors at once!"
- bulgarian_revolt.1.b: "Grant the Doukai their demands and recognize their claim to the Exarchate of Bulgaria."
-
  anatolian_revolt.1.t: "Popular Anatolian Strategoi Revolts"
  anatolian_revolt.1.d: "Powerful Strategoi in the Anatolia interior have rallied behind Bardas Phokas in his demands for greater autonomy for the region."
  anatolian_revolt.1.f: "Dynatói in the Anatolia interior have pledged their support to the Strategoi revolt led by Bardas Phokas in his demands for greater autonomy for the region."
@@ -280,6 +274,39 @@
  veiled_exarchate.6.f: "Those who opposed the [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle] were quickly put down. [SCOPE.sCountry('elysium_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, how they will return civilization to the lands of Australis."
  veiled_exarchate.6.a: "Allow [SCOPE.sCountry('australis_country').GetName] to continue as they were under [ROOT.GetCountry.GetName] guidence."
  veiled_exarchate.6.b: "Enforce our will on [SCOPE.sCountry('australis_country').GetName]."
+
+
+ br_balkan_revolt.2.t: "Balkan Crisis: The [SCOPE.sState('rebelling_state_scope').GetName] Uprising"
+ br_balkan_revolt.2.d: "There has been an uprising in [SCOPE.sState('rebelling_state_scope').GetName]."
+ br_balkan_revolt.2.f: "The governor of the province is dead. They have chosen a new king from among their landed men, or perhaps have been supplied one by a foreign power. They claim that their rebellion seeks to liberate all people of their creed within Basileia Romaion."
+ br_balkan_revolt.2.a: "Very well."
+ revolt_in_state_tt: "An organized revolution will begin in [SCOPE.sState('rebelling_state_scope').GetName]"
+
+ br_balkan_revolt.10.t: "Balkan Crisis: An Opportunity to Expand?"
+ br_balkan_revolt.10.d: "With Basileia Romaion in crisis, and rightful lands of our nation in the hands of the Romaioi, we must ask if we are bold enough to strike."
+ br_balkan_revolt.10.f: "For centuries it was assumed that Basileia Romaion were simply a fact of life for our people. Then came the Enlightenment, and then came Revolutions that saw the emergence of the concept of Nationalism. Lands in which people of our very same blood live and suffer under the yolk of the bloodthursty Romaioi lie directly at our border. Now may be the perfect time to accept these people, most of whom are currently in rebellion against the Romaioi as is, as ours, and send our forces in to consolidate these lands, while at the same time casting off whatever influences from Basileia Romaion remains in our government. Of course, it is also likely that Basileia Romaion will retaliate..."
+ br_balkan_revolt.10.a: "The Romaion insects will be driven back!"
+ br_balkan_revolt.10.b: "They are still too powerful to challenge..."
+
+ br_balkan_revolt.11.t: "Balkan Crisis: Incursion by the [SCOPE.sCountry('current_overlord_remover_scope').GetName]"
+ br_balkan_revolt.11.d: "Seeing that the Balkan Pronoia are in a state of Crisis, the [SCOPE.sCountry('current_overlord_remover_scope').GetAdjectiveNoFlag] has revealed himself for the trecherous fiend that he is."
+ br_balkan_revolt.11.f: "They have siezed land that is the Basileus's by rights! Without even doing the courtesy of declaring war? How could they betray us like this? After centuries as brothers living together in the Roman Empire?"
+ br_balkan_revolt.11.a: "They will feel the wrath of the Basileus."
+ br_balkan_revolt.11.b: "Legalize this land seizure, and say it is a token of good will."
+
+ br_balkan_revolt.12.t: "Balkan Crisis: Reports of Atrocities in [SCOPE.sCountry('br_war_crime_victim').GetName]"
+ br_balkan_revolt.12.d: "The leadership of the forces putting down the hated [SCOPE.sCountry('br_war_crime_victim').GetAdjectiveNoFlag] Rebels claims that some of his forces are committing acts that some may call atrocities against humanity."
+ br_balkan_revolt.12.f: "What is to be done? While there is currently no love for these people among the government, it is possible that not preventing these behaviours could draw negative attention from the rest of the world..."
+ br_balkan_revolt.12.a: "They deserve it! Make this the general order of all our forces in the region!"
+ br_balkan_revolt.12.b: "Tell that commander to prevent these behaviours wherever possible..."
+
+ br_balkan_revolt.13.t: "Balkan Dynatói Revolt"
+ br_balkan_revolt.13.d: "Powerful Dynatói in the balkans have rallied behind the Doukas family in their demands for greater autonomy."
+ br_balkan_revolt.13.f: "The Doukai from their power base in Serbia, have taken control of Northern Bulgaria and demand we recognize their illegal annexation."
+ br_balkan_revolt.13.a: "Crush the traitors at once!"
+ br_balkan_revolt.13.b: "Grant the Doukai their demands and recognize their claim to the Exarchate of Bulgaria."
+
+
  
 
 
